--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -45,6 +45,7 @@ const orgSchema = {
     <meta name="author" content="Open WP Club" />
     <link rel="canonical" href={canonicalURL} />
     <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Open WP Club Blog" href="/rss.xml" />
 
     <!-- Open Graph -->
     <meta property="og:title" content={title} />
